dhall/tests/type-errors/unit/FunctionApplicationArgumentNotMatch.txt
Type error: Unhandled error: error: function annot mismatch
 --> <current file>:1:1
  |
1 | (λ(_ : Natural) → _) True
  |  ^^^^^^^^^^^^^^^^^^^^^^^^ function annot mismatch
  |  ------------------ help: this expects an argument of type: Natural
  |                      ---- help: but this has type: Bool
  |
